<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, HelpME!</string>
    <string name="app_name">HelpME</string>
    <string name="test_sms">Send Message Test</string>
    <string name="settings_title">Settings</string>
    <string name="contacts_pref_cat_title">Contacts</string>
    <string name="contacts_pref_title">Emergency Contacts</string>
    <string name="contacts_pref_summary">Choose Contacts...</string>
    
    <!-- FaKods stuff -->
    <string name="accountSpinnerLabel">Account</string>
    <string name="doneContactButtonLabel">done...</string>
    <string name="addContactTitle">Add Contact</string>
    <string name="allAccounts">All Accounts</string>
    <string name="contactCreationFailure">Contact creation failed, check logs.</string>
    <string name="contactEmailLabel">Contact Email</string>
    <string name="contactNameLabel">Contact Name</string>
    <string name="contactPhoneLabel">Contact Phone</string>
    <string name="save">Save</string>
    <string name="selectAccountLabel">Select</string>
    <string name="selectLabel">Select label</string>
    <string name="showInvisible">Show Invisible Contacts (Only)</string>
    <string name="targetAccountLabel">Target Account</string>
    <string name="undefinedTypeLabel">(Undefined)</string>
    
    <!-- [e]lektrojung[e]'s stuff -->
    <string name="preferences_headline">Preferences</string>
    <string name="preferences_subheadline">Your personal data</string>
    <string name="preferences_name">Name:</string>
    <string name="preferences_sex">Your Name</string>
    <string name="preferences_age">Your Age</string>
    <string name="preferences_insurance">Your Insurance</string>
    <string name="preferences_insurance_id">Your Insurance's I</string>
</resources>
