<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  	<LinearLayout
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:orientation="horizontal">
  		<ImageView
			android:src="@drawable/ic_menu_preferences"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"/>
		<TextView
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:text="@string/preferences_headline"
		   	android:textSize="30dip"
		   	android:layout_gravity="center_vertical" />
   	</LinearLayout>
	<TextView
	   	android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:text="@string/preferences_subheadline"
	   	android:textSize="20dip"
	   	android:layout_gravity="center"/>
   	<LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal">
		<TextView
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:text="@string/preferences_name"
		   	android:textSize="20dip"
		   	android:layout_gravity="center_vertical" />
		<EditText
			android:id="@+id/input_name"
			android:layout_width="fill_parent"
		   	android:layout_height="wrap_content"
		   	android:text="Your Name"
		   	android:textSize="20dip"
		   	android:layout_gravity="center_vertical" />
   	</LinearLayout>
   	<LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal">
		<TextView
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:text="@string/preferences_sex"
		   	android:textSize="20dip"
		   	android:layout_gravity="center_vertical" />
		<EditText
			android:id="@+id/input_sex"
			android:layout_width="fill_parent"
		   	android:layout_height="wrap_content"
		   	android:text="Your Sex"
		   	android:textSize="20dip"
		   	android:layout_gravity="center_vertical" />
   	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:text="@string/preferences_age"
		   	android:textSize="20dip"
		   	android:layout_gravity="center_vertical" />
		<EditText
			android:id="@+id/input_name"
			android:layout_width="fill_parent"
		   	android:layout_height="wrap_content"
		   	android:text="Your Age"
		   	android:textSize="20dip"
		   	android:layout_gravity="center_vertical" />
   	</LinearLayout>
   	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:text="@string/preferences_insurance"
		   	android:textSize="20dip"
		   	android:layout_gravity="center_vertical" />
		<EditText
			android:id="@+id/input_name"
			android:layout_width="fill_parent"
		   	android:layout_height="wrap_content"
		   	android:text="Your Insurance"
		   	android:textSize="20dip"
		   	android:layout_gravity="center_vertical" />
   	</LinearLayout>
  
</LinearLayout>
